feat(persistence): Migra persistência de JSON para PostgreSQL
Refatora a camada de persistência, removendo a lógica manual de leitura/escrita de arquivos JSON e implementando Spring Data JPA com um banco de dados PostgreSQL.

- Adiciona dependências 'spring-boot-starter-data-jpa' e 'postgresql' ao pom.xml.
- Configura o 'application.properties' para a conexão com o PostgreSQL.
- Transforma 'Tarefa' em uma entidade JPA com @Entity e @Id.
- Converte 'TarefaRepository' de uma classe para uma interface que estende JpaRepository.
- Refatora 'TarefaService' para usar os métodos padrão do JpaRepository (save, findById, findAll, deleteById).
- Atualiza 'TarefaServiceTeste' para mocar o JpaRepository e validar a nova lógica.
- Remove arquivos desnecessários (tarefas.json, JacksonConfig.java).
- Atualiza o README.md com as novas instruções de setup do banco de dados.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,5 @@
-spring.application.name=gerenciamento-tarefas
+spring.datasource.url=jdbc:postgresql://localhost:5432/gerenciamento_tarefas
+spring.datasource.username=postgres
+spring.datasource.password=0318
+
+spring.jpa.hibernate.ddl-auto=update
